Fix overflow of text in events cards and titles

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -21,6 +21,7 @@ body {
   padding: 0;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 /* ==========================================================================
@@ -28,10 +29,6 @@ body {
    ========================================================================== */
 .main-container {
   flex: 1;
-  justify-content: center;
-  align-items: center;
-  min-height: calc(100vh - 60px);
-  padding: 20px;
 }
 
 /* ==========================================================================
@@ -413,7 +410,7 @@ body {
 }
 
 .card-body {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
@@ -430,6 +427,9 @@ body {
   color: black;
   display: flex;
   align-items: center;
+  white-space: nowrap; 
+  overflow: hidden; 
+  text-overflow: ellipsis;
 }
 
 .card-title i {
@@ -439,7 +439,7 @@ body {
 .card-text {
   margin-bottom: 10px;
   color: black;
-  overflow: hidden; 
+  max-height: 100px;
   text-overflow: ellipsis; 
   white-space: nowrap; 
 }
@@ -769,10 +769,18 @@ p {
   color: whitesmoke;
 }
 
-/* Footer section */
-.footer-text {
+.footer {
+  background-color: #878937;
+  color:#fff8ed;
   text-align: center;
   padding: 20px;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+}
+
+.footer-text {
+  margin: 0;
 }
 
 /* ==========================================================================
