--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -28,6 +28,11 @@ body {
    ========================================================================== */
 .main-container {
   flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: calc(100vh - 60px);
+  padding: 20px;
 }
 
 /* ==========================================================================
@@ -151,8 +156,17 @@ body {
   align-items: center;
   justify-content: center;
   margin-top: 60px;
+  border: none;
 }
 
+.hero img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  border: none; /* Ensure no border */
+  margin: 0; /* Ensure no margin */
+  padding: 0; /* Ensure no padding */
+}
 /* ==========================================================================
    Logo Section
    ========================================================================== */
@@ -331,9 +345,11 @@ body {
 }
 
 .card {
+  min-height: 200px;
+  padding: 15px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
+  overflow: visable;
 }
 
 .card-header {
@@ -467,11 +483,13 @@ body {
    Login Style Section
    ========================================================================== */
 .login-container {
- margin-top: 120px;
- display: flex:
- align-items: center;
- min-height: calc(100vh - 60px); 
- padding: 20px;
+  margin-top: 120px;
+  display: flex;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+  min-height: calc(100vh - 60px);
+  padding: 20px;
 }
 
 .login-card {
@@ -524,20 +542,11 @@ body {
   margin-top: 110px;
 }
 
-/* Community User Dashboard Section */
-/* .dashboard-container {
-  background-color: #fff8ed; /* Cream color from your palette */
-  /* padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+.events-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px; /* Add gap between event items */
 }
-
-/* Heading styling */
-/* .dashboard-container h2 {
-  text-align: center;
-  margin-bottom: 20px;
-  color: #333;
-} */
 
 .event-item {
   padding: 15px;
@@ -547,7 +556,7 @@ body {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: flex-center;
 }
 
 .event-item h3 {
@@ -559,6 +568,15 @@ body {
   margin: 5px 0;
   color: #555;
 } 
+
+.edit-delete-buttons {
+  display: flex;
+  gap: 10px;
+  margin: 10px;
+  justify-content: center;
+  align-content: center;
+}
+
 /* ==========================================================================
    Facilitator Booking Table Styles
    ========================================================================== */
@@ -711,9 +729,12 @@ p {
   margin: 20px auto;
   padding: 10px 20px; 
   border-radius: 4px; 
+  color: #f9f9f9;
+  background-color: #878937;
+  border-color: darkgrey;
 }
 
-.form-group {
+.form-group { 
   margin-bottom: 15px;
 }
 
@@ -743,6 +764,21 @@ p {
 /* ==========================================================================
    Footer Style section
    ========================================================================== */
+
+.footer{
+  background-color: #878937;
+  color: #fff8ed;
+  text-align: center;
+  padding: 20px;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+}
+
+.footer-text{
+  margin: 0;
+}
+
 /* Socials section */
 .social-icons {
   text-align: center;
